--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "jobly-solution",
+  "name": "jobly",
   "version": "2.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest -i"
+    "test": "jest --runInBand --detectOpenHandles --forceExit"
   },
   "jest": {
     "testPathIgnorePatterns": [
